# vesting-cliff-drip-stream

./: .cargo-mutants.toml  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  audit.toml  docker-compose.e2e.yml  docker-compose.yml  package.json  release-please-config.json
.github/: pull_request_template.md
.storybook/: main.ts  preview.ts
backend/: package-lock.json  package.json  tsconfig.json
design-system/: README.md
docs/: a11y-audit.md  analytics.md  api-reference.md  api.yaml  benchmarks.md  comparison.md  config.md  error-handling.md  faq.md  flows.md  glossary.md  horizon-unavailability-tests.md  mobile-claim-bottom-sheet.md  performance.md  schema.md  sponsor-cost-calculator.md  storage.md  stream-status-badges.md  visual-regression.md  walkthrough-guide.md  wallet-integration.md  wasm-size.md
examples/: batch-create.sh  full-lifecycle.sh
frontend/: KeyboardShortcuts.css  KeyboardShortcuts.test.ts  KeyboardShortcuts.ts  WalletConnectButton.css  WalletConnectButton.test.ts  WalletConnectButton.ts  index.html  package-lock.json  package.json  playwright.config.ts  print.css  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
k8s/: deployment.yaml
public/: favicon-manifest.json  index.html
scripts/: apply_branch_protection.sh  fund_keypairs.js  gen_keypairs.js  run_horizon_toxiproxy_tests.sh  smoke_test.sh
src/: contract.rs  error.rs  events.rs  lib.rs  storage.rs  types.rs
terraform/: main.tf  variables.tf
(+208 files in other folders)
