[package]
name = "vesting-cliff-drip-stream"
version = "0.1.0"
edition = "2021"
description = "A time-locked cliff vesting contract built on Soroban for long-term contributor retention"
license = "MIT"
repository = "https://github.com/your-org/vesting-cliff-drip-stream"

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "22.0.0", features = [] }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
soroban-token-sdk = { version = "22.0.0" }
proptest = "1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
